src/scss/global/scaffolding/color-mode.scss
.color-mode {
  &--dark {
    background-color: #000000;
  }

  &--light {
    background-color: #ffffff;
  }

  :root & {
    @each $group-name, $group-map in get($tokens, 'color') {
      @each $tint-name, $tints-map in $group-map {
        @each $light-mode-name-a, $light-modes-map-a in $tints-map {
          @each $light-mode-name-b, $light-modes-map-b in $tints-map {
            @if ($light-mode-name-a != $light-mode-name-b) {
              &--#{$light-mode-name-a} {
                @each $color-name, $color-value in $light-modes-map-a {
                  $selector: str-replace('--color-#{$group-name $tint-name $light-mode-name-b $color-name}', ' ', '-');
                  #{$selector}: #{$color-value};
                }
              }
            }
          }
        }
      }
    }
  }
}

